Opened 12 years ago

Closed 11 years ago

#8005 closed bug (fixed)

Drag&drop drawing issue with font size 13

Reported by: humdinger Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev42776.

Unfortunately I can't take a screenshot of this. Here's how to reproduce:

  • Set the Font preferences to DejaVu Sans, size 13 instead of the default 12.
  • Restart Tracker.
  • Open any folder.
  • Drag out the little folder icon at the far right of the menu bar.

-> There's a 1px high white line under the dragged out folder name.

Change History (1)

comment:1 by stpere, 11 years ago

Resolution: fixed
Status: newclosed

should be fixed in hrev45090. thanks!

Note: See TracTickets for help on using tickets.