Tracker: Drawing issues in dragBitmap (#8005)

Remove rounding issues in height calculation leading to drawing issues when using some font sizes.